[package]
name = "internet-radio"
version = "0.1.0"
authors = ["Tomer Eliahu <73798700+Tomer-Eliahu@users.noreply.github.com>"]
edition = "2024"
resolver = "2"
rust-version = "1.89" # Current latest version of Xtensa Rust (source: https://github.com/esp-rs/rust-build)

[[bin]]
name = "internet-radio"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s" # My note: maybe modify (or remove). 
# from my template maybe also add
# codegen-units = 1 # better optimizations
# lto = true # better optimizations

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
embedded-svc = "0.28.1"
embedded-hal = "1.0.0"


# Note: for me using embassy-time-driver here + embassy-time crate never worked.
# Luckily, with Embassy we can provide our time instead. So we use the EspTaskTimerService instead.
# So we are only using Embasssy for the exector + some utils.
#Note that we needed to add "experimental" just so that our fork will complie.
esp-idf-svc = { version = "0.51", features = ["embassy-sync", "critical-section", "experimental"] }

embassy-executor = { version = "0.9.1", features = ["executor-thread", "arch-std",] }

embassy-sync = { version = "0.7.2" }
embassy-futures = "0.1.2"


embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
embedded-io = "0.6.1"
#symphonia = {version = "0.5.4", features = ["all"]}
#I think just keep these features for symphonia ["aac", "mp3", "pcm", "all-formats"] (THIS worked for mp3).
#OR try for symphonia with all features (I only saw aac and mp3 used and aacp which is unsupported so 
#I am not sure if this is worth it)
symphonia = {version = "0.5.4", default-features = false, features = ["aac", "mp3", "pcm", "all-formats"]}
static_cell = "2.1.1"
embedded-hal-bus = {version= "0.3.0", features =["alloc", "std"]}

#TODO: get rid of this if it turns out I don't need to fork this mp3 crate.
symphonia-bundle-mp3 = {version = "0.5.4", features=["mp3"]}

#We needed to fork symphonia and replace LazyStatic 
#with std::LazyLock::new(||  Box::new( ..stuff..)) 
#This makes Rust reserve 1 usize per such static as opposed to the 356152 bytes.
#Because this data is uninitilized it gets placed in DRAM (which we only have 32KB!)
[patch.crates-io]
symphonia = {git = "https://github.com/Tomer-Eliahu/Symphonia.git", rev = "b350c2b4e44dfe639c38525a7684509cbdfb7554" }
symphonia-bundle-mp3 = {git = "https://github.com/Tomer-Eliahu/Symphonia.git", rev = "b350c2b4e44dfe639c38525a7684509cbdfb7554" }
esp-idf-svc = {git = "https://github.com/Tomer-Eliahu/esp-idf-svc.git", rev = "3332c822bac8b07d9b9d092322d386a9566ff33d"}



# ---------------------------------------------------------------------------------------------

#esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
#critical-section = { version = "1.2", features = ["std"], default-features = false }
# embassy-time = { version = "0.5" }


# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

# ---------------------------------------------------------------------------------------------


[build-dependencies]
embuild = "0.33"
