[package]
name = "internet-radio"
version = "0.1.0"
authors = ["Tomer Eliahu <73798700+Tomer-Eliahu@users.noreply.github.com>"]
edition = "2024"
resolver = "2"
rust-version = "1.89" # Current latest version of Xtensa Rust (source: https://github.com/esp-rs/rust-build)

[[bin]]
name = "internet-radio"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s" # My note: maybe modify. 
# from my template maybe also add
# codegen-units = 1 # better optimizations
# lto = true # better optimizations

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
embedded-svc = "0.28.1"
embedded-hal = "1.0.0"


# Note: for me, using embassy-time-driver here + embassy-time crate never worked.
# Luckily, with Embassy we can provide our time: We use the EspTaskTimerService instead.
# So, we are only using Embassy for the executor + some utils.
# Note that we needed to add "experimental" just so that our fork will compile.
esp-idf-svc = { version = "0.51", features = ["embassy-sync", "critical-section", "experimental"] }

embassy-executor = { version = "0.9.1", features = ["executor-thread", "arch-std"] }

embassy-sync = { version = "0.7.2" }
embassy-futures = "0.1.2"


embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
embedded-io = "0.6.1"
embedded-hal-bus = {version= "0.3.0", features =["alloc", "std"]}


symphonia = {version = "0.5.4", default-features = false, features = ["aac", "mp3", "pcm", "all-formats"]}
static_cell = "2.1.1"


[patch.crates-io]
symphonia = {git = "https://github.com/Tomer-Eliahu/Symphonia.git", rev = "a160aaa78d65bd9af3df3f6e47d0ca2551caba4a" }
esp-idf-svc = {git = "https://github.com/Tomer-Eliahu/esp-idf-svc.git", rev = "0591e5e989cadca5f35863024199cfd44c3f3970"}


[build-dependencies]
embuild = "0.33"
